tambah link home

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <h1>SMK NATA</h1>
         <h2>KELAS XI TKJ B</h2>
-        <a href="" class="btn btn-primary card_btn">Home</a>
+        <a href="home.html" class="btn btn-primary card_btn">Home</a>
       </div>
 
       <div class="swiper-wrapper">
