--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   <body> <section class="swiper mySwiper">
     <div class="container">
     <h1>SMK NAZHATUT THULLAB</h1>
-    <a href="http://">XI TKJ A</a>
+    <a href="cardslider/index.html">XI TKJ A</a>
     <a href="index.html">XI TKJ B</a>
     <link rel="stylesheet" href="style2.css" />
   </body>
